--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   firebase_core: ^2.13.1
   firebase_analytics: ^10.4.2
   mongo_dart: ^0.10.3
+  firebase_performance: ^0.9.4+7
+  firebase_core_web: ^2.0.0
 
 dev_dependencies:
   flutter_test:
