--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   mongo_dart: ^0.10.3
   firebase_performance: ^0.9.4+7
   firebase_core_web: ^2.0.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
