--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   firebase_performance: ^0.9.4+7
   firebase_core_web: ^2.0.0
   intl: ^0.18.0
+  provider: ^6.0.0
 
 dev_dependencies:
   flutter_test:
